[package]
name = "odl"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
strip = true

[dependencies]
anyhow = "1.0"
winit = { version = "0.30.13", features = ["android-native-activity"] }
bytemuck = { version = "1.24", features = [ "derive" ] }
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"
cgmath = "0.18"
egui = "0.33.2"
eframe = { version = "0.33.2", features = [
  "default",
  "wgpu",
  "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
egui-wgpu = "0.33.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "28.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
