[package]
name = "odl"
version = "0.1.0"
authors = ["Zane Zollers"]
edition = "2024"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
# GUI dependencies
egui = "0.33.0"
egui_extras = "0.33.3"
egui-wgpu = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
serde = { version = "1.0.219", features = ["derive"] }
bytemuck = { version = "1.24", features = [ "derive" ] }

# Geometry Kernal dependencies
# this library has a massive build time
opencascade = { version = "0.2", default-features = false }
clap = { version = "4", features = ["derive"] }
glam = { version = "0.24", features = ["bytemuck"] }

log = "0.4.27"
cgmath = "0.18.0"
rand = "0.10.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[workspace.lints.rust]
unsafe_code = "deny"

[patch.crates-io]
# use the mode recent version of rust binding for opencascade - will switch to fork in future
opencascade = {git = "https://github.com/bschwind/opencascade-rs"}

# use builtin opencascade library instead of external one
[features]
default = ["builtin"]
builtin = ["opencascade/builtin"]
wgpu = []